Fix local link in README.md

--- a/README.adoc
+++ b/README.adoc
@@ -2,8 +2,8 @@
 
 Collection of actions for `metanorma-cli`
 
-* ./collection/action.yml[collection]
-* ./compile/action.yml[compile]
-* ./docker-site-gen/action.yml[docker-site-gen]
-* ./new/action.yml[new]
-* ./site-gen/action.yml[site generator]
+* link:./collection/action.yml[collection]
+* link:./compile/action.yml[compile]
+* link:./docker-site-gen/action.yml[docker-site-gen]
+* link:./new/action.yml[new]
+* link:./site-gen/action.yml[site generator]
