--- a/README.adoc
+++ b/README.adoc
@@ -7,3 +7,4 @@ Collection of actions for `metanorma-cli`
 * link:./docker-site-gen/action.yml[docker-site-gen]
 * link:./new/action.yml[new]
 * link:./site-gen/action.yml[site generator]
+* link:./setup-flavors/action.yml[add non-default flavors/processors to metanorma]
